# pybasicbayes

./: pyproject.toml  setup.py
